--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,14 @@
 <div class="container">
   <app-cockpit
     (serverCreated)="onServerAdded($event)"
-    (blueprintCreated)="onBlueprintAdded($event)"
+    (bpCreated)="onBlueprintAdded($event)"
   ></app-cockpit>
   <hr>
   <div class="row">
     <div class="col-xs-12">
       <app-server-element
         *ngFor="let serverElement of serverElements"
-        [srvElement]="serverElement"
+        [element]="serverElement"
       ></app-server-element>
     </div>
   </div>
