--- a/src/app/users/user/user.component.html
+++ b/src/app/users/user/user.component.html
@@ -1,2 +1,3 @@
 <p>User with ID {{user.id}}</p>
 <p>User name is {{user.name}}</p>
+<a [routerLink]="['/users', 42, 'Vovanium']"> Load Vovanium (42)</a>
