--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -44,11 +44,22 @@
         </div>
         <div class="form-group">
           <textarea name="questionAnswer"
-                    cols="15"
+                    rows="3"
+                    cols="20"
                     [(ngModel)]="answer">
           </textarea>
         </div>
         <p>Your reply: {{answer}}</p>
+        <div class="radio" *ngFor="let gender of genders">
+          <label>
+            <input
+              type="radio"
+              name="gender"
+              ngModel
+              [value]="gender">
+            {{gender}}
+          </label>
+        </div>
         <button
           class="btn btn-primary"
           type="submit"
