--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,9 +2,10 @@
   <div class="row">
     <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
       <form (ngSubmit)="onSubmit()" #f="ngForm">
-        <div id="user-data"
-             ngModelGroup="userData"
-             #userData="ngModelGroup">
+        <div
+          id="user-data"
+          ngModelGroup="userData"
+          #userData="ngModelGroup">
           <div class="form-group">
             <label for="username">Username</label>
             <input
@@ -15,7 +16,10 @@
               name="username"
               required>
           </div>
-          <button class="btn btn-default" type="button">Suggest an Username</button>
+          <button
+            class="btn btn-default"
+            type="button"
+            (click)="suggestUserName()">Suggest an Username</button>
           <div class="form-group">
             <label for="email">Mail</label>
             <input
@@ -27,8 +31,8 @@
               required
               email
               #email="ngModel">
+            <span class="help-block" *ngIf="!email.valid && email.touched">Please enter a valid email!</span>
           </div>
-          <span class="help-block" *ngIf="!email.valid && email.touched">Please enter a valid email</span>
         </div>
         <p *ngIf="!userData.valid && userData.touched">User Data is invalid!</p>
         <div class="form-group">
@@ -43,29 +47,40 @@
           </select>
         </div>
         <div class="form-group">
-          <textarea name="questionAnswer"
-                    rows="3"
-                    cols="20"
-                    [(ngModel)]="answer">
-          </textarea>
+          <textarea
+            name="questionAnswer"
+            rows="3"
+            class="form-control"
+            [(ngModel)]="answer"></textarea>
         </div>
-        <p>Your reply: {{answer}}</p>
+        <p>Your reply: {{ answer }}</p>
         <div class="radio" *ngFor="let gender of genders">
           <label>
             <input
               type="radio"
               name="gender"
               ngModel
-              [value]="gender">
-            {{gender}}
+              [value]="gender"
+              required>
+            {{ gender }}
           </label>
         </div>
         <button
           class="btn btn-primary"
           type="submit"
-          [disabled]="!f.valid">Submit
-        </button>
+          [disabled]="!f.valid">Submit</button>
       </form>
+    </div>
+  </div>
+  <hr>
+  <div class="row" *ngIf="submitted">
+    <div class="col-xs-12">
+      <h3>Your Data</h3>
+      <p>Username: {{ user.username }}</p>
+      <p>Mail: {{ user.email }}</p>
+      <p>Secret Question: Your first {{ user.secretQuestion }}</p>
+      <p>Answer: {{ user.answer }}</p>
+      <p>Gender: {{ user.gender }}</p>
     </div>
   </div>
 </div>
