--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,7 @@
         <input type="text" [(ngModel)]="filteredStatus">
       </label>
       <hr>
+      <h2>App Status: {{appStatus|async}}</h2>
       <ul class="list-group">
         <li
           class="list-group-item"
