--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,344 @@
-/* You can add global styles to this file, and also import other style files */
-@import '~bootstrap/dist/css/bootstrap.min.css';
+/*!* You can add global styles to this file, and also import other style files *!*/
+/*@import '~bootstrap/dist/css/bootstrap.min.css';*/
+
+/*.App {*/
+/*  font-family: sans-serif;*/
+/*  text-align: center;*/
+/*}*/
+/*h1,*/
+/*h2,*/
+/*h3 {*/
+/*  text-align: center;*/
+/*}*/
+/*h1 {*/
+/*  text-transform: capitalize;*/
+/*}*/
+/*ol li {*/
+/*  margin: 10px;*/
+/*  font-size: 1.4rem;*/
+/*}*/
+/*.wrapper {*/
+/*  padding: 30px;*/
+/*  height: 100%;*/
+/*  display: grid;*/
+/*  align-items: center;*/
+/*  justify-content: center;*/
+/*}*/
+/*.switch,*/
+/*.switch-label,*/
+/*.switch-slider {*/
+/*  cursor: pointer;*/
+/*  width: 60px;*/
+/*  height: 27px;*/
+/*}*/
+/*.switch {*/
+/*  position: relative;*/
+/*  display: block;*/
+/*  margin: 10px auto;*/
+/*}*/
+/*.switch-check {*/
+/*  position: absolute;*/
+/*  opacity: 0;*/
+/*}*/
+/*.switch-label,*/
+/*.switch-slider {*/
+/*  position: absolute;*/
+/*  top: 0;*/
+/*}*/
+/*.switch-label {*/
+/*  left: 0;*/
+/*  text-indent: -9999px;*/
+/*}*/
+/*.switch-slider {*/
+/*  border-radius: 14px;*/
+/*  box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.1) inset,*/
+/*  0 0 4px rgba(0, 0, 0, 0.5) inset, 0 5px 4px 1px rgba(0, 0, 0, 0.3) inset,*/
+/*  0 27px 0 rgba(0, 0, 0, 0.07) inset;*/
+/*  -webkit-transition: width 0.2s linear;*/
+/*  -moz-transition: width 0.2s linear;*/
+/*  -o-transition: width 0.2s linear;*/
+/*  transition: width 0.2s linear;*/
+/*}*/
+/*.switch-slider-on {*/
+/*  left: 0;*/
+/*  width: 27px;*/
+/*  background: #c8ea14*/
+/*  url(https://vitaminvp.github.io/WebAcademy-HomeWork/client/docs/assets/images/on.svg)*/
+/*  185% 5px no-repeat;*/
+/*}*/
+/*.switch-slider-off {*/
+/*  right: 0;*/
+/*  background: #fff*/
+/*  url(https://vitaminvp.github.io/WebAcademy-HomeWork/client/docs/assets/images/off.svg)*/
+/*  33px 5px no-repeat;*/
+/*}*/
+/*.switch-slider-off:after {*/
+/*  position: absolute;*/
+/*  top: 1px;*/
+/*  left: 1px;*/
+/*  width: 25px;*/
+/*  height: 25px;*/
+/*  border-radius: 50%;*/
+/*  background: #e5e5e5;*/
+/*  background: -webkit-linear-gradient(#d0d0d0, #fdfdfd);*/
+/*  background: -moz-linear-gradient(#d0d0d0, #fdfdfd);*/
+/*  background: -o-linear-gradient(#d0d0d0, #fdfdfd);*/
+/*  background: linear-gradient(#d0d0d0, #fdfdfd);*/
+/*  box-shadow: 0 0 2px 2px #fff inset, 0 0 4px 1px rgba(0, 0, 0, 0.6);*/
+/*  content: "";*/
+/*}*/
+/*.switch-label:active .switch-slider-off:after,*/
+/*.switch-check:focus + .switch-label .switch-slider-off:after {*/
+/*  background: #d5d5d5;*/
+/*  background: -webkit-linear-gradient(#c8c8c8, #e4e4e4);*/
+/*  background: -moz-linear-gradient(#c8c8c8, #e4e4e4);*/
+/*  background: -o-linear-gradient(#c8c8c8, #e4e4e4);*/
+/*  background: linear-gradient(#c8c8c8, #e4e4e4);*/
+/*}*/
+/*.switch-check:checked + .switch-label .switch-slider-on {*/
+/*  width: 60px;*/
+/*}*/
+/*.switch-check:checked + .switch-label .switch-slider-off {*/
+/*  width: 27px;*/
+/*}*/
+/*.select_div_css {*/
+/*  margin-left: 20px;*/
+/*  display: block;*/
+/*  position: relative;*/
+/*  float: left;*/
+/*}*/
+/*.toggle-button {*/
+/*  box-shadow: inset 0 1px 0 0 #ffffff;*/
+/*  background: linear-gradient(to bottom, #ededed 5%, #dfdfdf 100%);*/
+/*  background: #ededed;*/
+/*  border-radius: 15px;*/
+/*  border: 1px solid #dcdcdc;*/
+/*  display: block;*/
+/*  cursor: pointer;*/
+/*  color: #777777;*/
+/*  font-family: Arial, Helvetica, sans-serif;*/
+/*  font-size: 15px;*/
+/*  font-weight: bold;*/
+/*  padding: 6px 24px;*/
+/*  text-decoration: none;*/
+/*  text-shadow: 0 1px 0 #ffffff;*/
+/*  margin: 20px auto;*/
+/*}*/
+/*.toggle-button:hover {*/
+/*  background: linear-gradient(to bottom, #dfdfdf 5%, #ededed 100%);*/
+/*}*/
+/*.toggle-button:active {*/
+/*  position: relative;*/
+/*  top: 1px;*/
+/*}*/
+/*.click-count {*/
+/*  text-align: center;*/
+/*  font-style: italic;*/
+/*}*/
+
+/*.yellow-border {*/
+/*  border: 4px solid yellow;*/
+/*}*/
+
+/*.form {*/
+/*  max-width: 550px;*/
+/*  background: #fafafa;*/
+/*  padding: 30px;*/
+/*  margin: 50px auto;*/
+/*  box-shadow: 1px 1px 25px rgba(0, 0, 0, 0.35);*/
+/*  border-radius: 10px;*/
+/*  border: 6px solid #305a72;*/
+/*}*/
+/*.form .container {*/
+/*  padding: 0;*/
+/*  margin: 0;*/
+/*  list-style: none;*/
+/*  font: 12px Arial, Helvetica, sans-serif;*/
+/*  min-width: 360px;*/
+/*}*/
+/*.form .container .group {*/
+/*  display: block;*/
+/*  margin-bottom: 10px;*/
+/*  min-height: 35px;*/
+/*}*/
+/*.form .container .group .field-style {*/
+/*  box-sizing: border-box;*/
+/*  -webkit-box-sizing: border-box;*/
+/*  -moz-box-sizing: border-box;*/
+/*  padding: 8px;*/
+/*  outline: none;*/
+/*  border: 1px solid #b0cfe0;*/
+/*  -webkit-transition: all 0.3s ease-in-out;*/
+/*  -moz-transition: all 0.3s ease-in-out;*/
+/*  -o-transition: all 0.3s ease-in-out;*/
+/*}*/
+/*.form .container .group .field-style:focus {*/
+/*  box-shadow: 0 0 5px #b0cfe0;*/
+/*  border: 1px solid #b0cfe0;*/
+/*}*/
+/*.form .container .group label {*/
+/*  margin-right: 7px;*/
+/*}*/
+/*.form .container .group .field-split {*/
+/*  width: 49%;*/
+/*}*/
+/*.form .container .group .field-full {*/
+/*  width: 100%;*/
+/*}*/
+/*.form .container .group input.align-left {*/
+/*  float: left;*/
+/*}*/
+/*.form .container .group input.align-right {*/
+/*  float: right;*/
+/*}*/
+/*.form .container .group textarea {*/
+/*  width: 100%;*/
+/*  height: 100px;*/
+/*}*/
+/*.form .container .group button[type="button"],*/
+/*.form .container .group button[type="submit"] {*/
+/*  -moz-box-shadow: inset 0 1px 0 0 #3985b1;*/
+/*  -webkit-box-shadow: inset 0 1px 0 0 #3985b1;*/
+/*  box-shadow: inset 0 1px 0 0 #3985b1;*/
+/*  background-color: #216288;*/
+/*  border: 1px solid #17445e;*/
+/*  display: inline-block;*/
+/*  cursor: pointer;*/
+/*  color: #ffffff;*/
+/*  padding: 8px 18px;*/
+/*  text-decoration: none;*/
+/*  font: 12px Arial, Helvetica, sans-serif;*/
+/*}*/
+/*.form .container .group button[type="button"]:hover,*/
+/*.form .container .group button[type="submit"]:hover {*/
+/*  background: linear-gradient(to bottom, #2d77a2 5%, #337da8 100%);*/
+/*  background: #28739e;*/
+/*}*/
+
+/*button:disabled,*/
+/*button[disabled]{*/
+/*  border: 1px solid #eae3e3;*/
+/*  background-color: #fffcfc;*/
+/*  color: #d8d5d5;*/
+/*}*/
+
+/*.form .container .group button[disabled],*/
+/*.form .container .group button[disabled]:hover {*/
+/*  -moz-box-shadow: inset 0 1px 0 0 #a9b1af;*/
+/*  -webkit-box-shadow: inset 0 1px 0 0 #a1a7b1;*/
+/*  box-shadow: inset 0 1px 0 0 #aba4b1;*/
+/*  background-color: #4d5050;*/
+/*  border: 1px solid #444647;*/
+/*  background: linear-gradient(to bottom, #9ea0a2 5%, #a095a8 100%);*/
+/*  background: #9b9e8e;*/
+/*}*/
+
+
+/*.toggle-btn.toggle-btn-on {*/
+/*  background: #86d993;*/
+/*}*/
+
+/*.toggle-input {*/
+/*  display: none;*/
+/*}*/
+
+/*.toggle-btn {*/
+/*  display: inline-block;*/
+/*  outline: 0;*/
+/*  width: 4em;*/
+/*  height: 2em;*/
+/*  position: relative;*/
+/*  cursor: pointer;*/
+/*  user-select: none;*/
+/*  background: #fbfbfb;*/
+/*  border-radius: 2em;*/
+/*  padding: 2px;*/
+/*  transition: all 0.4s ease;*/
+/*  border: 1px solid #e8eae9;*/
+/*}*/
+
+/*.toggle-btn::after {*/
+/*  left: 0;*/
+/*  position: relative;*/
+/*  display: block;*/
+/*  content: '';*/
+/*  width: 50%;*/
+/*  height: 100%;*/
+/*  border-radius: 2em;*/
+/*  background: #fbfbfb;*/
+/*  transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275), padding 0.3s ease, margin 0.3s ease;*/
+/*  box-shadow: 0 0 0 1px rgb(0 0 0 / 10%), 0 4px 0 rgb(0 0 0 / 8%);*/
+/*}*/
+
+
+/* Add application styles & imports to this file! */
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+body {
+  font-family: 'Antic Slab', serif;
+}
+hr {
+  width: 100%;
+}
+/*
+toggle styles copied and modified from
+https://codepen.io/mallendeo/pen/eLIiG
+by Mauricio Allende (https://mallendeo.com/)
+ */
+.toggle-btn {
+  display: inline-block;
+  outline: 0;
+  width: 4em;
+  height: 2em;
+  position: relative;
+  cursor: pointer;
+  user-select: none;
+  background: #fbfbfb;
+  border-radius: 2em;
+  padding: 2px;
+  transition: all 0.4s ease;
+  border: 1px solid #e8eae9;
+}
+.toggle-btn:focus::after,
+.toggle-btn:active::after {
+  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1),
+  0 4px 0 rgba(0, 0, 0, 0.08),
+  inset 0px 0px 0px 1.5px #9c9c9c;
+}
+.toggle-btn::after {
+  left: 0;
+  position: relative;
+  display: block;
+  content: '';
+  width: 50%;
+  height: 100%;
+  border-radius: 2em;
+  background: #fbfbfb;
+  transition: all 0.3s
+  cubic-bezier(0.175, 0.885, 0.32, 1.275),
+  padding 0.3s ease, margin 0.3s ease;
+  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1),
+  0 4px 0 rgba(0, 0, 0, 0.08);
+}
+.toggle-btn.toggle-btn-on::after {
+  left: 50%;
+}
+.toggle-btn.toggle-btn-on {
+  background: #86d993;
+}
+.toggle-btn.toggle-btn-on:active {
+  box-shadow: none;
+}
+.toggle-btn.toggle-btn-on:active::after {
+  margin-left: -0.8em;
+}
+.toggle-btn:active::after {
+  padding-right: 0.8em;
+}
+.toggle-input {
+  display: none;
+}
