--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,39 @@
-<toggle (toggle)="onToggle($event)">
+<h2>Basic</h2>
+<div toggle #firstToggle="toggle" (toggle)="onToggle('first', $event)">
+	<p>
+    First:
+    <toggle-on>On</toggle-on>
+    <toggle-off>Off</toggle-off>
+    <toggle-button></toggle-button>
+  </p>
+	<toggle #secondToggle="toggle" (toggle)="onToggle('second', $event)">
+  	<p>
+      Second:
+      <toggle-on>On</toggle-on>
+      <toggle-off>Off</toggle-off>
+      <toggle-button></toggle-button>
+    </p>
+	</toggle>
+</div>
+
+<h2>Explicit References</h2>
+<p [toggleProvider]="firstToggle">
+  First:
   <toggle-on>On</toggle-on>
   <toggle-off>Off</toggle-off>
-  <toggle-off>Off</toggle-off>
-  <other-component></other-component>
   <toggle-button></toggle-button>
-</toggle>
+</p>
+<p [toggleProvider]="secondToggle">
+  Second:
+  <toggle-on>On</toggle-on>
+  <toggle-off>Off</toggle-off>
+  <toggle-button></toggle-button>
+</p>
+
+<!--<h2>Custom Components</h2>-->
+<!--<div [toggleProvider]="firstToggle">-->
+<!--  <labelled-state toggleName="First"></labelled-state>-->
+<!--  <labelled-button toggleName="First"></labelled-button>-->
+<!--</div>-->
+<!--<labelled-state toggleName="Second" [toggleProvider]="secondToggle"> </labelled-state>-->
+<!--<labelled-button toggleName="Second" [toggleProvider]="secondToggle"> </labelled-button>-->
